# pytorch3d

./: .flake8  .gitignore  CNAME  CONTRIBUTING.md  INSTALL.md  LICENSE  LICENSE-3RD-PARTY  MANIFEST.in  README.md  help.html  index.html  linter.sh  pyproject.toml  setup.cfg  setup.py  sitemap.xml  users.html
.circleci/: build_count.py  check.sh  config.in.yml  config.yml  regenerate.py
.github/: CONTRIBUTING.md
css/: main.css
dev/: linter.sh  run_tutorials.sh  test_list.py
docs/: .gitignore  .readthedocs.yaml  Makefile  README.md  batching.html  batching.md  cameras.html  conf.py  cubify.html  datasets.html  generate_implicitron_stubs.py  generate_stubs.py  index.rst  io.html  iou3d.html  meshes_io.html  overview.md  renderer.html  renderer_getting_started.html  requirements.txt  visualization.html  why_pytorch3d.html
en/: help.html  index.html  users.html
files/: bundle_adjustment.ipynb  bundle_adjustment.py  camera_position_optimization_with_differentiable_rendering.ipynb  camera_position_optimization_with_differentiable_rendering.py  dataloaders_ShapeNetCore_R2N2.ipynb  dataloaders_ShapeNetCore_R2N2.py  deform_source_mesh_to_target_mesh.ipynb  deform_source_mesh_to_target_mesh.py  fit_simple_neural_radiance_field.ipynb  fit_simple_neural_radiance_field.py  fit_textured_mesh.ipynb  fit_textured_mesh.py  fit_textured_volume.ipynb  fit_textured_volume.py  implicitron_config_system.ipynb  implicitron_config_system.py  implicitron_volumes.ipynb  implicitron_volumes.py  render_colored_points.ipynb  render_colored_points.py  render_densepose.ipynb  render_densepose.py  render_textured_meshes.ipynb  render_textured_meshes.py
help/: index.html
packaging/: build_conda.py  build_conda.sh  build_wheel.sh  pkg_helpers.bash
pytorch3d/: __init__.py
scripts/: build_website.sh  enter_vs_dev_shell.ps1  parse_tutorials.py  publish_website.sh
tests/: bm_acos_linear_extrapolation.py  bm_barycentric_clipping.py  bm_blending.py  bm_cameras_alignment.py  bm_chamfer.py  bm_cubify.py  bm_face_areas_normals.py  bm_graph_conv.py  bm_interpolate_face_attributes.py  bm_iou_box3d.py  bm_knn.py  bm_lighting.py  bm_main.py  bm_marching_cubes.py  bm_mesh_edge_loss.py  bm_mesh_io.py  (+117 more)
(+795 files in other folders)
